# tgterm

./: .env.example  README.md  bot.py  debug_capture.py  pyproject.toml  render.py  requirements.txt  run.sh  test_logic.py  test_tmux.py  tmuxctl.py
