[project]
name = "tgterm"
version = "0.1.0"
description = "Telegram bot driving tmux-backed shell sessions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-telegram-bot>=21",
    "pillow>=10",
]

[project.scripts]
tgterm = "bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["bot.py", "tmuxctl.py", "render.py"]
